@@ -1,11 +1,19 @@
 
 = rufus-jig CHANGELOG.txt
 
+
+== rufus-jig - 0.1.3    not yet released
+
+- CouchDatabase#put_doc : 1 or 2 params
+
+
 == rufus-jig - 0.1.2    released 2009/12/07
 
 - fixed issue with '/' and net/http. Thanks Torsten.
 
+
 == rufus-jig - 0.1.1    released
+
 
 == rufus-jig - 0.1.0    released 2009/11/09
 
